--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,8 +1,8 @@
 name: Latest Youtube Videos
 on:
-  schedule: # Run workflow automatically
+  schedule:
     - cron: '0 * * * *' # Runs every hour, on the hour
-  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
+  workflow_dispatch:
 jobs:
   update-readme-with-youtube:
     name: Update this repo's README with latest videos from Youtube
